--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 
 body {
-  background: radial-gradient(circle, #8ab1aa 40%, #5eacc2, #1f81af);
+  /* background: radial-gradient(circle, #8ab1aa 40%, #5eacc2, #1f81af); */
+  background: url('../images/giphy_4.gif');
   font-family: Oxygen, sans-serif;
 }
 
@@ -26,6 +27,7 @@ body {
   top: 80%;
   left: 50%;
   transform: translate(-50%, -30%);
+  z-index: 3;
 }
 
 .col-centered input {
@@ -53,7 +55,20 @@ body {
 }
 
 .usernames {
+  position: absolute;
   display: none;
+  color: #fff;
+  font-weight: bold;
+  top: -10px;
+  text-align: center;
+}
+
+.player1 #username1 {
+  left: -90px;
+}
+
+.player2 #username2 {
+  left: 58px;
 }
 
 .pulse-button {
@@ -89,10 +104,6 @@ body {
     transform: translateX(350px);
     -webkit-transform: translateX(260px); /** Chrome & Safari **/
   }
-
- 
-
-
 
   .player-two {
     background-color: green;
